# ChangeLog for dev-python/django-model-utils
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> django-model-utils-2.2.ebuild,
  django-model-utils-2.3.1.ebuild:
  dev-python/django-model-utils: Updated ebuild headers to match new $Id$ line

*django-model-utils-2.3.1 (30 Jul 2015)

  30 Jul 2015; Justin Lecher <jlec@gentoo.org> +django-model-utils-2.3.1.ebuild:
  dev-python/django-model-utils: Version Bump

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-python/django-model-utils: Add github to remote-id in metadata.xml

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-python/django-model-utils: Add pypi to remote-id in metadata.xml

  13 Apr 2015; Justin Lecher <jlec@gentoo.org> -django-model-utils-2.1.1.ebuild,
  django-model-utils-2.2.ebuild:
  dev-python/django-model-utils: Add documentation to HOMEPAGE; drop old

  18 Mar 2015; Justin Lecher <jlec@gentoo.org> django-model-utils-2.2.ebuild:
  dev-python/django-model-utils: Add pypy support and test

*django-model-utils-2.2 (03 Mar 2015)

  03 Mar 2015; Justin Lecher <jlec@gentoo.org> +django-model-utils-2.2.ebuild,
  -django-model-utils-1.3.1.ebuild:
  dev-python/django-model-utils: Version BUmp; drop old

*django-model-utils-2.1.1 (29 Nov 2014)

  29 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
  +django-model-utils-2.1.1.ebuild, django-model-utils-1.3.1.ebuild:
  Version bump

  11 Jun 2013; Justin Lecher <jlec@gentoo.org> -ChangeLog:
  Version Bump; fix license; bump to EAPI=5 and new python r1 eclasses