@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/django-model-utils
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+  13 Feb 2016; Johann Schmitz <ercpe@gentoo.org> django-model-utils-2.2.ebuild,
+  django-model-utils-2.3.1.ebuild, django-model-utils-2.4.ebuild:
+  dev-python/django-model-utils: Added missing setuptools
 
   16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> django-model-utils-2.2.ebuild,
   django-model-utils-2.3.1.ebuild:
